--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ header {
     box-shadow: 0 4px 8px rgba(247, 245, 245, 0.1);
     min-height: 100px;
     max-height: 100px;
+    
 }
 
 .logo {
@@ -39,7 +40,10 @@ header {
 }
 
 nav {
-    position: relative;
+    display: flex;
+    align-items: center;
+    flex-grow: 1; /* Allow nav to grow and fill available space */
+    justify-content: center;
 }
 
 .menu {
@@ -167,7 +171,7 @@ h1 {
 
 .form-container iframe {
     width: 100%;
-    height: 400px; /* Adjust the height as needed */
+    height: 600px; /* Adjust the height as needed */
     border: none;
     border-radius: 10px;
 }
