--- a/styles.css
+++ b/styles.css
@@ -131,6 +131,7 @@ h1 {
     header {
         flex-direction: column;
         align-items: flex-start;
+        flex-wrap: wrap;
     }
     .menu {
         width: 50%;
