--- a/styles.css
+++ b/styles.css
@@ -167,8 +167,7 @@ h1 {
 
 /* Form Container Styles */
 .form-container {
-    width: 80%;
-    max-width: 800px;
+    width: auto;
     margin: 20px auto;
     padding: 50px;
     background-color: #ffc000;
