--- a/styles.css
+++ b/styles.css
@@ -27,13 +27,14 @@ header {
 }
 
 .logo {
+    display: flex;
     width: 20%; /* Use percentage for responsiveness */
     height: auto; /* Maintain aspect ratio */
-    object-fit: contain;
+    
 }
 
 .right-logo{
-    width: 25%; /* Use percentage for responsiveness */
+    width: auto; /* Use percentage for responsiveness */
     height: auto; /* Maintain aspect ratio */
 }
 
@@ -125,11 +126,11 @@ h1 {
 }
 
 /* Small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 500px) {
     header {
         flex-direction: column;
-        align-items: flex-start;
-        flex-wrap: wrap;
+        align-items: center;
+        
     }
     .menu {
         width: 100%; /* Full width for better alignment */
