--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ nav {
         position: relative;
         top : 60px;
         right: 0;
-        background-color: #fad5a5;
+        background-color: #7c3030;
         padding: 10px;
         box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
     }
